# triagenet

./: .env.example  .gitignore  AGENTS.md  INTERVIEW_TALKING_POINTS.md  PHASE_1_5_NOTES.md  PHASE_1_NOTES.md  PHASE_2_NOTES.md  PHASE_3_NOTES.md  PHASE_4_NOTES.md  PHASE_5_NOTES.md  README.md  pyproject.toml
api/: __init__.py  main.py  schemas.py
docs/: architecture.md  walkthrough_script.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.test.tsx  App.tsx
models/: chemistry_metadata.json  soh_metadata.json
notebooks/: 01_data_exploration.ipynb  02_chemistry_classifier.ipynb  03_soh_regressor.ipynb  04_triage_decisions.ipynb
reports/phase2_chemistry/: leave_one_cell_predictions.csv  shape_leave_one_cell_predictions.csv  shape_without_soh_window_predictions.csv  voltage_leave_one_cell_predictions.csv  voltage_robustness.json  voltage_without_soh_window_predictions.csv  without_soh_window_predictions.csv
reports/phase3_soh/: ensemble_gpr_predictions.csv  ensemble_xgb_predictions.csv  metrics.csv  per_chemistry_gpr_lco_predictions.csv  per_chemistry_gpr_lfp_predictions.csv  per_chemistry_xgb_lco_predictions.csv  per_chemistry_xgb_lfp_predictions.csv  shared_gpr_predictions.csv  shared_xgb_predictions.csv
scripts/: download_datasets.sh  evaluate_triage.py  probe_voltage_robustness.py  train_chemistry.py  train_soh.py
tests/: test_api.py  test_chemistry.py  test_data_split.py  test_e2e.py  test_economics.py  test_features.py  test_loaders.py  test_pipeline.py  test_schema.py  test_soh.py  test_triage.py
(+51 files in other folders)
