[project]
name = "triagenet"
version = "0.1.0"
description = "Chemistry-agnostic retired lithium-ion battery triage."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<2.3",
    "pyarrow>=15.0,<16.0",
    "scipy>=1.12,<1.13",
    "scikit-learn>=1.4,<1.5",
    "xgboost>=2.0,<2.1",
    "joblib>=1.3,<1.4",
    "matplotlib>=3.8,<3.9",
    "seaborn>=0.13,<0.14",
    "tqdm>=4.66,<4.67",
    "requests>=2.31,<2.32",
    "python-dotenv>=1.0,<1.1",
    "typer>=0.12,<0.13",
    "fastapi>=0.136,<0.137",
    "pydantic>=2.13,<2.14",
    "uvicorn>=0.46,<0.47",
    "python-multipart>=0.0.27,<0.1",
    "httpx>=0.28,<0.29",
    "openpyxl>=3.1,<3.2",
    "h5py>=3.11,<3.12",
    "pytest>=8.0,<8.1",
    "ruff>=0.3,<0.4",
    "black>=24.2,<24.3",
]

[project.scripts]
triagenet = "triagenet.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
